# Interactome-Specialization-Predicts-Genome-Wide-Binding-Site-Degeneracy-

./: README.md
tf-ppi-binding-degeneracy/: LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.py
tf-ppi-binding-degeneracy/data/: README.md
tf-ppi-binding-degeneracy/figures/: make_figures.py
tf-ppi-binding-degeneracy/src/tf_ppi/: __init__.py  config.py  stage01_tf_identification.py  stage02_jaspar_information_content.py  stage03_network_construction.py  stage04_family_classification.py  stage05_expression_breadth.py  stage06_genomic_sampling.py  stage07_fetch_genomic_data.py  stage08_compartment_comparison.py  stage09_evidence_decomposition.py  stage10_core_test.py  stage11_composite_assortativity.py  stage12_confound_battery.py  stage13_cluster_bootstrap.py  stage14_adversarial_checks.py  utils.py
tf-ppi-binding-degeneracy/tests/: test_utils.py
