[project]
name = "tf-ppi-binding-degeneracy"
version = "1.0.0"
description = "PPI interactome specialization vs. genome-wide TF binding degeneracy in Drosophila melanogaster"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pyBigWig>=0.3.22",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
